--- a/charts/dremio_v2/templates/dremio-hpa.yaml
+++ b/charts/dremio_v2/templates/dremio-hpa.yaml
@@ -1,6 +1,7 @@
-{{- if and $.Values.executor.nodeLifecycleService $.Values.executor.nodeLifecycleService.enabled }}
 {{- range $engineIndex, $engineName := $.Values.executor.engines -}}
 {{- $executorName := ternary "dremio-executor" (printf "dremio-executor-%s" $engineName) (eq $engineName "default") -}}
+{{ $isEnabled := include "dremio.hpa.isEnabled" (list $ $engineName) }}
+{{ if eq $isEnabled "true" }}
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
@@ -13,16 +14,16 @@ spec:
     kind: StatefulSet
     name: {{ $executorName }}
   metrics:
-     {{- include "dremio.hpa.scaleMetrics.defaults" (list $ $engineName) | nindent 4 }}
-     {{- include "dremio.hpa.scaleMetrics.userDefined" (list $ $engineName) | nindent 4 }}
+    {{- include "dremio.hpa.scaleMetrics.defaults" (list $ $engineName) | nindent 4 }}
+    {{- include "dremio.hpa.scaleMetrics.userDefined" (list $ $engineName) | nindent 4 }}
   behavior:
     scaleDown:
-      stabilizationWindowSeconds: {{ $.Values.executor.nodeLifecycleService.scalingBehavior.scaleDown.stabilizationWindowSeconds | default 300 }}
+      {{- include "dremio.hpa.behavior.scaleDown.stabilizationWindowSeconds" (list $ $engineName) | nindent 6 }}
       policies:
         {{- include "dremio.hpa.behavior.scaleDown.policies.default" (list $ $engineName) | nindent 6 }}
         {{- include "dremio.hpa.behavior.scaleDown.policies.userDefined" (list $ $engineName) | nindent 6 }}
     scaleUp:
-      stabilizationWindowSeconds: {{ $.Values.executor.nodeLifecycleService.scalingBehavior.scaleUp.stabilizationWindowSeconds | default 300 }}
+      {{- include "dremio.hpa.behavior.scaleUp.stabilizationWindowSeconds" (list $ $engineName) | nindent 6 }}
       policies:
         {{- include "dremio.hpa.behavior.scaleUp.policies.default" (list $ $engineName) | nindent 6 }}
         {{- include "dremio.hpa.behavior.scaleUp.policies.userDefined" (list $ $engineName) | nindent 6 }}
