--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -24,6 +24,8 @@ spec:
         {{- include "dremio.coordinator.podAnnotations" $ | nindent 8}}
     spec:
       {{- include "dremio.coordinator.serviceAccount" $ | nindent 6 }}
+      securityContext:
+        runAsUser: 0
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -63,6 +65,7 @@ spec:
           mountPath: /opt/dremio/tls
         {{- end }}
         {{- include "dremio.coordinator.extraVolumeMounts" $ | nindent 8 }}
+        {{- include "dremio.coordinator.log.volumeMount" $ | nindent 8 }}
         env:
         - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
           value: "{{ template "dremio.coordinator.heapMemory" $ }}"
@@ -81,6 +84,9 @@ spec:
           value: "/opt/dremio/aws/credentials"
         - name: AWS_SHARED_CREDENTIALS_FILE
           value: "/opt/dremio/aws/credentials"
+        - name: DREMIO_LOG_TO_CONSOLE
+          value: "true"
+        {{- include "dremio.coordinator.log.path" $ | nindent 8 }}
         command: ["/opt/dremio/bin/dremio"]
         args:
         - "start-fg"
@@ -115,6 +121,7 @@ spec:
           periodSeconds: {{ $.Values.coordinator.readinessProbe.periodSeconds }}
       initContainers:
       {{- include "dremio.coordinator.extraInitContainers" $ | nindent 6 }}
+      {{- include "dremio.coordinator.log.volumeMountInitContainer" $ | nindent 6 }}
       - name: start-only-one-dremio-master
         image: busybox
         command: ["sh", "-c", "INDEX=${HOSTNAME##*-}; if [ $INDEX -ne 0 ]; then echo Only one master should be running.; exit 1; fi; "]
@@ -227,6 +234,7 @@ spec:
       {{- include "dremio.coordinator.extraVolumes" $ | nindent 6 }}
       {{- include "dremio.imagePullSecrets" $ | nindent 6 }}
   volumeClaimTemplates:
+  {{- include "dremio.coordinator.log.volumeClaimTemplate" $ | nindent 2 }}
   - metadata:
       name: dremio-master-volume
     spec:
