INF-1717: Enable Vault for k8s-dac

--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -102,3 +102,7 @@ services.flight.ssl.enabled: true
 services.flight.ssl.auto-certificate.enabled: false
 services.flight.ssl.keyStore: "/opt/dremio/tls/flight.pkcs12"
 {{- end }}
+
+{{- if $.Values.vault.enabled }}
+services.credentials.hashicorp.vault.config: {{ $.Values.vault.configLocation }}
+{{- end }}
