DX-85280: improve reliability of zookeeper liveness and readiness probes
Change-Id: I6f3b2e9cd39410061dff3ef6a259239255177b8e

--- a/charts/dremio_v2/templates/zookeeper.yaml
+++ b/charts/dremio_v2/templates/zookeeper.yaml
@@ -122,12 +122,12 @@ spec:
           name: leader-election
         readinessProbe:
           exec:
-            command: ["/bin/bash", "-c", "[ \"$(echo ruok | nc 127.0.0.1 2181)\" == \"imok\" ]" ]
+            command: ["/bin/bash", "-c", "[ \"$(echo ruok | (exec 3<>/dev/tcp/127.0.0.1/2181; cat >&3; cat <&3; exec 3<&-))\" == \"imok\" ]" ]
           initialDelaySeconds: 10
           timeoutSeconds: 5
         livenessProbe:
           exec:
-            command: ["/bin/bash", "-c", "[ \"$(echo ruok | nc 127.0.0.1 2181)\" == \"imok\" ]" ]
+            command: ["/bin/bash", "-c", "[ \"$(echo ruok | (exec 3<>/dev/tcp/127.0.0.1/2181; cat >&3; cat <&3; exec 3<&-))\" == \"imok\" ]" ]
           initialDelaySeconds: 10
           timeoutSeconds: 5
         volumeMounts:
