DX-84052: Include cronjob template for Dremio backup
* Added additional documentation to configure automated backups
* Always create and attach a Kube Service Account for the coordinator
* Assign a Role to the Kube Service Account so that automated backups can exec into the Master Coordinator pod
* Added a configurable Kube CronJob to perform backups

Change-Id: I00aa8f8018935f6ee410c30840df0eb555a39772

--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -23,7 +23,7 @@ spec:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
         {{- include "dremio.coordinator.podAnnotations" $ | nindent 8}}
     spec:
-      {{- include "dremio.coordinator.serviceAccount" $ | nindent 6 }}
+      serviceAccountName: "{{- template "dremio.coordinator.serviceAccountName" $ }}"
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
