DX-85668: Include at least 1 scale-out coordinator alongside the master
Helm template or install will fail if the coordinator.count is not greater than 0

Change-Id: I83afda09bffc78c3c37b8deada71d4d79a15ff92

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -7,7 +7,7 @@ metadata:
   {{- include "dremio.coordinator.labels" $ | nindent 2 }}
 spec:
   serviceName: "dremio-cluster-pod"
-  replicas: {{ $.Values.coordinator.count }}
+  replicas: {{ template "dremio.coordinator.replicas" $ }}
   podManagementPolicy: "Parallel"
   revisionHistoryLimit: 1
   selector:
