DX-85670: Steer OBDC/JDBC and Flight queries away from the master
With this change ODBC/JDBC/Flight queries will go to the scale-out
coordinators. The REST API and UI will continue to be served from the
master coordinator.

Change-Id: If3ae1a8911bd691d3eedbf9ad39eb0d17be35a6e

--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -87,10 +87,12 @@ spec:
         ports:
         - containerPort: 9047
           name: web
+        {{- if (le (int .Values.coordinator.count) 0) }}
         - containerPort: 31010
           name: client
         - containerPort: 32010
           name: flight
+        {{- end }}
         - containerPort: 45678
           name: server-fabric
         - containerPort: 45679
