DX-85730: add high availability for the master coordinator
Users can configure high availability of the master coordinator in  values.yaml. This adds a second active master coordinator waiting to become the active master coordinator should the original master coordinator crash. This is a configurable feature that is disabled by default.

Change-Id: I6350591703647680f9eb06c95df943af479b0914

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -33,6 +33,17 @@ podLabels: {}
 nodeSelector: {}
 tolerations: []
 
+# Dremio Master Coordinator
+#masterCoordinator:
+# To enable high availability for the master coordinator, set the enabled flag to true
+#  highAvailability:
+#    enabled: true
+
+#  To use persistent storage from your cloud vendor, set the provider to your cloud vendor
+#  persistentStorage:
+#    Options are: gcp, aws, azure
+#    provider: ""
+
 # Dremio Coordinator
 coordinator:
   # CPU & Memory
