jmap preStop hook example
Change-Id: I4e0f12d39786040f7044bf8bf3d5a3788d715412

--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -39,6 +39,13 @@ spec:
       {{- include "dremio.coordinator.tolerations" $ | nindent 6 }}
       containers:
       - name: dremio-master-coordinator
+        lifecycle:
+          preStop:
+            exec:
+              command:
+                - "jmap"
+                - "-dump:format=b,file=/opt/dremio/data/heap.hprof"
+                - "1"
         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
         resources:
