DX-87986: Prometheus metrics port can be configured
Change-Id: I3894d74fd70350885d5801ccf57e50d44f0bef6a

--- a/charts/dremio_v2/tests/dremio-executor_test.yaml
+++ b/charts/dremio_v2/tests/dremio-executor_test.yaml
@@ -62,3 +62,17 @@ tests:
           content:
             name: prometheus
             containerPort: 9010
+  - it: Metrics port should be configurable
+    set:
+      distStorage:
+        type: "gcp"
+      executor:
+        nodeLifecycleService:
+          enabled: true
+          metricsPort: 777
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].ports
+          content:
+            name: prometheus
+            containerPort: 777
