--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -299,7 +299,7 @@ executor:
 zookeeper:
   # The Zookeeper image used in the cluster.
   image: zookeeper
-  imageTag: 3.8-temurin
+  imageTag: 3.8.3-jre-17
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
