Add appProtocol field to dremio-client service

--- a/charts/dremio_v2/templates/dremio-service-client.yaml
+++ b/charts/dremio_v2/templates/dremio-service-client.yaml
@@ -17,6 +17,7 @@ spec:
   - port: {{ $.Values.coordinator.flight.port | default 32010 }}
     targetPort: flight
     name: flight
+    appProtocol: http2
   selector:
     app: dremio-coordinator
   type: {{ $.Values.service.type }}
