--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -39,7 +39,7 @@ spec:
         resources:
           requests:
             cpu: {{ template "dremio.executor.cpu" (list $ $engineName) }}
-            memory: {{ template "dremio.executor.memory" (list $ $engineName) }}
+            memory: "{{ template "dremio.executor.memory" (list $ $engineName) }}Mi"
         volumeMounts:
         - name: {{ template "dremio.executor.volumeClaimName" (list $ $engineName) }}
           mountPath: /opt/dremio/data
@@ -57,10 +57,8 @@ spec:
         {{- include "dremio.executor.extraVolumeMounts" (list $ $engineName) | nindent 8 }}
         {{- include "dremio.executor.log.volumeMount" (list $ $engineName) | nindent 8 }}
         env:
-        - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
-          value: "{{ template "dremio.executor.heapMemory" (list $ $engineName) }}"
-        - name: DREMIO_MAX_DIRECT_MEMORY_SIZE_MB
-          value: "{{ template "dremio.executor.directMemory" (list $ $engineName) }}"
+        - name: DREMIO_MAX_MEMORY_SIZE_MB
+          value: "{{ template "dremio.executor.memory" (list $ $engineName) }}"
         - name: DREMIO_JAVA_SERVER_EXTRA_OPTS
           value: >-
             {{- include "dremio.executor.extraStartParams" (list $ $engineName) | nindent 12 -}}
