--- a/charts/dremio_v2/Chart.yaml
+++ b/charts/dremio_v2/Chart.yaml
@@ -1,7 +1,11 @@
 apiVersion: "v1"
 name: "dremio"
-version: "2.0.0"
+version: "2.0.1"
 keywords:
   - dremio
   - data
 home: https://www.dremio.com/
+dependencies:
+  - name : nats
+    version: 1.2.1
+    repository:  https://nats-io.github.io/k8s/helm/charts/
